--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "express.js project template ",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "start": "node src/server.js",
-    "watch": "nodemon src/server.js"
+    "start:watch": "nodemon src/server.js"
   },
   "author": "Farah Saleem",
   "license": "ISC",
@@ -14,7 +15,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "supertest": "^6.2.3"
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
