--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
     "morgan": "^1.10.0",
+    "rotating-file-stream": "^3.0.3",
     "supertest": "^6.2.3"
   },
   "devDependencies": {
