--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express-validator": "^6.14.0",
     "morgan": "^1.10.0",
     "rotating-file-stream": "^3.0.3",
-    "supertest": "^6.2.3"
+    "supertest": "^6.2.3",
+    "winston": "^3.7.2",
+    "winston-daily-rotate-file": "^4.6.1"
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
