--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.3",
-    "express-validator": "^6.14.0",
+    "joi": "^17.6.0",
     "morgan": "^1.10.0",
-    "rotating-file-stream": "^3.0.3",
     "supertest": "^6.2.3",
     "winston": "^3.7.2",
     "winston-daily-rotate-file": "^4.6.1"
