--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "joi": "^17.6.0",
+    "mongoose": "^6.3.1",
     "morgan": "^1.10.0",
     "pm2": "^5.2.0",
     "supertest": "^6.2.3",
