--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"cSpell.words": ["Logform", "middlewares", "todos", "YYYYMMDDHH"]
+	"cSpell.words": ["Logform", "middlewares", "todos", "virtuals", "YYYYMMDDHH"]
 }
