--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Farah Saleem",
   "license": "ISC",
   "dependencies": {
+    "awilix": "^7.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
